--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "expo": "^49.0.3",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
@@ -26,7 +27,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "babel-plugin-module-resolver": "^5.0.0"
   },
   "resolutions": {
     "metro": "^0.73.7",
